wrap fixed footer in media query

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -49,12 +49,14 @@ button.uikit-btn {
   }
 }
 
-.footer--fixed-bottom {
-  position: absolute;
-  box-sizing: border-box;
-  padding: 0.6em;
-  width: 100%;
-  bottom: 0;
-  right: 0;
-  left: 0;
+@media (max-width: 640px) {
+  .footer--fixed-bottom {
+    position: absolute;
+    box-sizing: border-box;
+    padding: 0.6em;
+    width: 100%;
+    bottom: 0;
+    right: 0;
+    left: 0;
+  }
 }
